Update colors again

--- a/static/sass/_ioc-edx-theme.scss
+++ b/static/sass/_ioc-edx-theme.scss
@@ -10,7 +10,7 @@
 //-----------------
 
 $beautiful-blue: #2daae1;
-$darker-blue: #0984BA;
+$darker-blue: #0f70b7;
 
 $cardinal-light: #c83737; //Selected Header BG Color, ie. calendar        ***Custom, not from palette***
 $cardinal-bg: #e9afaf; //Selected Content BG Color, ie. calendar          ***Custom, not from palette***
