Fix header size

--- a/static/sass/_ioc-edx-theme.scss
+++ b/static/sass/_ioc-edx-theme.scss
@@ -167,7 +167,7 @@ $form-bg-color: $gray-1;
 $modal-bg-color: $gray-1;
 
 //TOP HEADER IMAGE MARGIN
-$header_image_margin: -77px;
+$header_image_margin: 0;
 
 //FOOTER MARGIN
 $footer_margin: ($baseline/4) 0;
