--- a/static/sass/_ioc-edx-theme.scss
+++ b/static/sass/_ioc-edx-theme.scss
@@ -1,10 +1,3 @@
-/****************************************************************************************************
-*   Stanford Theming File
-*
-*   Contains all the theme color definitions for the Stanford Open Source MOOC Project
-*
-****************************************************************************************************/
-
 //-----------------
 //  Color variables
 //-----------------
@@ -42,13 +35,10 @@ $black-80: #585754;
 //  Font Assignment
 //-----------------
 
-$theme-sans-font: 'Open Sans';
-$sans-serif: $theme-sans-font, $sans-serif;
+$sans-serif: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $body-font-family: $sans-serif;
 
-$theme-serif-font: 'Times New Roman';
-$serif: $theme-serif-font, $serif;
-
+$serif: Georgia, "Times New Roman", Times, serif
 
 
 
