Change sand color

--- a/static/sass/_ioc-edx-theme.scss
+++ b/static/sass/_ioc-edx-theme.scss
@@ -23,7 +23,7 @@ $gray: #3f3c30; //Main Text Color
 $gray-75: lighten($gray, 18.25%); //Lighter Text Color
 
 $gray-3: #e9e6df; //Block/Course BG Color
-$gray-2: #f2f1eb;
+$gray-2: #eee;
 $gray-1: #fbfbf9; //Main BG Color
 
 $black: #2e2d29;
