--- a/static/sass/_ioc-edx-theme.scss
+++ b/static/sass/_ioc-edx-theme.scss
@@ -10,7 +10,7 @@ $cardinal-bg: #e9afaf; //Selected Content BG Color, ie. calendar          ***Cus
 
 //Beige Color Variables
 $beige: #9d9573;
-$beige-60: lighten($beige, 18.5%); //Main Border/HR Color
+$beige-60: #ccc; // border colors
 $beige-25: lighten($beige, 25%);
 
 //Sandstone Color Variables
