Change link style

--- a/static/sass/_ioc-edx-theme.scss
+++ b/static/sass/_ioc-edx-theme.scss
@@ -179,6 +179,9 @@ button, input, select, textarea {
     font-family: $sans-serif;
 }
 
-p a:link, p a:visited {
-    font-family: $sans-serif;
+p {
+    > a:link,
+    > a:visited {
+        font-family: $sans-serif;
+    }
 }
