Fix home background image

--- a/static/sass/_ioc-edx-theme.scss
+++ b/static/sass/_ioc-edx-theme.scss
@@ -24,7 +24,7 @@ $border-color-2: $ioc-grey-2;
 $border-color-3: $ioc-grey-2;
 $outer-border-color: $ioc-grey-2;
 
-$homepage-bg-image: '../themes/ioc-edx-theme/images/ionis-online.jpg';
+$homepage-bg-image: url('../themes/ioc-edx-theme/images/ionis-online.jpg');
 $login-banner-image: none;
 $register-banner-image: none;
 $video-thumb-url: '../themes/ioc-edx-theme/images/ionis-video-thumb.png';
